--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "request": "^2.88.0",
     "split": "^1.0.1",
-    "through2": "^3.0.1"
+    "through2": "^3.0.1",
+    "websocket-stream": "^5.5.0"
   },
   "devDependencies": {},
   "scripts": {
